<resources>
    <string name="charset">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXY Z .,-</string>
    <string name="assign_user">Assign user<font fgcolor='#ff0400'>*</font></string>
    <string name="alternate_user">Alternate User<font fgcolor='#01009ec6'>*</font></string>
    <string name="select_supervisor">Select Supervisor<font fgcolor='#ff0400'>*</font></string>
    <string name="deadline">Deadline<font fgcolor='#ff0400'>*</font></string>
    <string name="order">Order<font fgcolor='#ff0400'>*</font></string>
    <string name="toast_bold">Bold</string>
    <string name="toast_italic">Italic</string>
    <string name="toast_underline">Underline</string>
    <string name="toast_strikethrough">Strikethrough</string>
    <string name="toast_bullet">Bullet</string>
    <string name="toast_quote">Quote</string>
    <string name="toast_insert_link">Insert link</string>
    <string name="toast_format_clear">Format clear</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_audit_trail_user">AuditTrailUserActivity</string>
    <string name="title_activity_audit_trail_storage">AuditTrailStorageActivity</string>
    <string name="title_activity_audit_trail_work_flow">AuditTrailWorkFlowActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="no_metadata_found">No metadata found</string>
    <string name="sub_total">Sub Total</string>
    <string name="files_search">Files Search</string>
    <string name="choose_language">Choose Language</string>
    <string name="are_you_want_to_undo_the_shared_file">Are you want to undo the shared file ?</string>
    <string name="empty_fields_are_there">"Empty Fields are there "</string>
    <string name="incorrect_pwd">Incorrect Password</string>
    <string name="change_signature">Change signature</string>
    <string name="error_while_uploading">Error while uploading</string>
    <string name="select_details">Select Details</string>
    <string name="need_permisions">Need Permissions</string>
    <string name="enter_designation">Enter Designation</string>
    <string name="urgent">Urgent</string>
    <string name="modify_storage">Modify Storage</string>
    <string name="supervisor">Supervisor</string>
    <string name="file_version">File Version</string>
    <string name="workflow_report">Workflow Report</string>
    <string name="shared_folder_with_me">Shared Folder With Me</string>
    <string name="mClass">Class</string>
    <string name="folders">Folders</string>
    <string name="user_report">User Report</string>
    <string name="date_of_travel">Date Of Travel</string>
    <string name="storage_report">Storage Report</string>
    <string name="page_count">Page Count</string>
    <string name="searched_query">"Searched Query : "</string>
    <string name="move_here">Move Here</string>
    <string name="get">Get</string>
    <string name="no_info_found">No Info found</string>
    <string name="select_task">Select Task</string>
    <string name="upload_document">Upload Document</string>
    <string name="zero_file_found">0 file found</string>
    <string name="storage_name">Storage name</string>
    <string name="file_size">File size</string>
    <string name="field_is_required">Field is required</string>
    <string name="task_status">Task Status</string>
    <string name="user_name">User name</string>
    <string name="intiate_file">Intiate File</string>
    <string name="out_of">out of</string>
    <string name="check_your_internet_connection_and_try_again">Check your internet connection and try again</string>
    <string name="please_select_username">Please Select Username</string>
    <string name="add_sub_folder_to">Add Sub Folder to</string>
    <string name="are_you_sure_want_to_check_in_doc">Are you sure you want to check In document</string>
    <string name="rejected">Rejected</string>
    <string name="shared_to">Shared To</string>
    <string name="enter_your_query_here">Enter your query here</string>
    <string name="choose_file">Choose File</string>
    <string name="To">To</string>
    <string name="delete">Delete</string>
    <string name="workflow_claim_form_travel_has_been_cancelled">Workflow Claim Form Travel has been cancelled</string>
    <string name="please_select_deadline">Please select Deadline</string>
    <string name="reset_password">Reset Password ?</string>
    <string name="download">Download</string>
    <string name="no_of_pages">No of pages</string>
    <string name="workflow_status">Workflow Status</string>
    <string name="approved_reject_task">Approved / Rejected Task</string>
    <string name="no_frequently_queries_found">No Frequently Queries Found</string>
    <string name="lock_folder">Lock Folder</string>
    <string name="start_datetime">Start Datetime</string>
    <string name="group_manager">Group Manager</string>
    <string name="food_charges">Food Charges</string>
    <string name="select_one_person_to_share">Select Atleast 1 Person to share</string>
    <string name="details_of_travel">Details Of Travel</string>
    <string name="initiating_claim_sanction_form">Initiating Claim Sanction Form</string>
    <string name="documents">Documents</string>
    <string name="department">Department</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dms_report">DMS REPORT</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="out_time">Out Time*</string>
    <string name="attach_document_for_uploading">Attach document for uploading</string>
    <string name="add_comment">Add Comment</string>
    <string name="select_metadata">Select Metadata</string>
    <string name="get_workflow">get workflow</string>
    <string name="required_fields_are_marked_with_a">REQUIRED FIELDS ARE MARKED WITH A</string>
    <string name="task_in_process_for_annotation_test">Task in process for annotation test</string>
    <string name="select_tour_id">Select Tour ID</string>
    <string name="login">Login</string>
    <string name="_4_other_expenses_specify_if_any">(4) Other Expenses(Specify,if any)</string>
    <string name="copy_storage_files">Copy Storage Files</string>
    <string name="total_amount">Total Amount</string>
    <string name="workflow">Workflow</string>
    <string name="storage_manager">Storage Manager</string>
    <string name="_3_misc_expense">(3) Misc Expense</string>
    <string name="visitor_search">Visitor Search</string>
    <string name="metadata_search">Metadata Search</string>
    <string name="user_manager">User Manager</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="signature">Signature</string>
    <string name="employee_id">Employee ID</string>
    <string name="copy_here">Copy Here</string>
    <string name="workflow_management">Workflow Management</string>
    <string name="task">Task</string>
    <string name="select_all">Select all</string>
    <string name="check_your_internet_connection_and_try_again_later">Check your internet connection and try again later</string>
    <string name="please_select_mode_of_travel_first">Please Select Mode of Travel First</string>
    <string name="internet">Internet</string>
    <string name="folder_name">Folder Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="Pages">Pages</string>
    <string name="user_role">User Role</string>
    <string name="select_username">Select Username</string>
    <string name="date_of_travel_field_is_empty">Date of travel field is empty</string>
    <string name="awaited">Awaited</string>
    <string name="enter_email">Enter Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="_1_to_and_for_fare">(1) To And For Fare</string>
    <string name="please_select_storage">Please Select Storage</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="are_you_sure_want_to_move">Are you sure you want to move %s files ?</string>
    <string name="total_claimed_amount_1_2_3_4">Total Claimed Amount (1+2+3+4)</string>
    <string name="logout">Logout</string>
    <string name="update_app">Update App</string>
    <string name="error">Error</string>
    <string name="hours">Hours</string>
    <string name="select_site">Select Site</string>
    <string name="visitor_pass_entry">Visitor Pass Entry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="less_advance_rs">Less:Advance Rs:</string>
    <string name="total">total</string>
    <string name="select_date">Select Date</string>
    <string name="update_metadata_of_file">Update MetaData of File</string>
    <string name="processing">Processing</string>
    <string name="add_metdata">Add Metdata</string>
    <string name="deselect_all">Deselect all</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="no_data_found">No Data Found</string>
    <string name="search_workflow">Search workflow</string>
    <string name="results_found">results found</string>
    <string name="loading_advance_sanctioned_form_details">Loading Advance Sanctioned Form Details</string>
    <string name="plese_enter_confirm_password">Please enter confirm password</string>
    <string name="quick_search_hint">Quick Search : files , documents ...</string>
    <string name="place">Place</string>
    <string name="shared_status">Shared Status</string>
    <string name="image_viewer">Image Viewer</string>
    <string name="unlocking_folder">UnLocking Folder</string>
    <string name="workflow_priority">Workflow Priority</string>
    <string name="user_audit">User Audit</string>
    <string name="check_if_company_guest_house_available">Check if Company Guest House Available</string>
    <string name="enter_new_pwd">Please Enter New Password</string>
    <string name="note_sheet">Note Sheet</string>
    <string name="allow">Allow</string>
    <string name="move_copy_storage">Move/Copy Storage</string>
    <string name="control_panel">Control Panel</string>
    <string name="new_password">New Password</string>
    <string name="meeting">Meeting*</string>
    <string name="done">Done</string>
    <string name="share_folder">Share Folder</string>
    <string name="close">close</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="quick_search">Quick Search</string>
    <string name="copy_storage">Copy Storage</string>
    <string name="update_meeting_status">Update Meeting Status</string>
    <string name="wait">Wait</string>
    <string name="approved_rejected_task">Approved / Rejected Task</string>
    <string name="add_view_notes">Add/View Notes</string>
    <string name="share_file_on_mail">Share file on mail</string>
    <string name="unlock_folder">Unlock Folder</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="move_files_here">Move Files Here</string>
    <string name="enter_your_text_here">Enter your text here</string>
    <string name="submit">Submit</string>
    <string name="sanctioned">Sanctioned</string>
    <string name="create_new_sub_folder">Create New Sub Folder</string>
    <string name="document_properties">Document Properties</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="confirm">Confirm</string>
    <string name="copy_files_here">Copy Files Here</string>
    <string name="comment_task">Comment Task</string>
    <string name="search_metadata">Search Metadata</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="assign_metadata">Assign MetaData</string>
</resources>