<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_move_storage_movehere"
        android:title="@string/move_here"
        android:icon="@drawable/ic_move_to_inbox_black_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_move_storage_copyhere"
        android:title="@string/copy_here"
        android:icon="@drawable/ic_move_to_inbox_black_24dp"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_move_storage_movefiles"
        android:title="@string/move_files_here"
        android:icon="@drawable/ic_move_to_inbox_black_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_move_storage_copyfiles"
        android:title="@string/copy_files_here"
        android:icon="@drawable/ic_move_to_inbox_black_24dp"
        app:showAsAction="never" />



</menu>