<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_fileview_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete"
        android:visible="true"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_fileview_copy"
        android:icon="@drawable/ic_content_copy_white_24dp"
        android:title="@string/quick_search"
        android:visible="false"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_fileview_move"
        android:icon="@drawable/ic_reply_white_24dp"
        android:title="@string/quick_search"
        android:visible="false"
        app:showAsAction="always"

        />

    <item
        android:id="@+id/action_fileview_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/quick_search"
        android:visible="false"
        app:showAsAction="always"

        />

    <item
        android:visible="false"
        android:id="@+id/action_fileview_file_mail"
        android:icon="@drawable/ic_mail_outline_white_24dp"
        android:title="@string/share_file_on_mail"
        app:showAsAction="always"

        />


</menu>