<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/update_meeting_status"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/meeting"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:checkedButton="@id/rb_allow"
                    android:id="@+id/rg_update_meeting_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rb_allow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/allow"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/rb_done"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/done"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/rb_wait"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wait"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/rb_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:textSize="12sp" />

                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/add_comment">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_comments"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:gravity="top"
                        android:textSize="13sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">


                <Button
                    android:layout_margin="2dp"
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="@color/light_red"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <Button
                    android:layout_margin="2dp"
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="@color/colorPrimary"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="13sp" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</androidx.cardview.widget.CardView>