<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_blue_24dp"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/reset_password"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_alert_dialog_folder_reset_otp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_otp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_alert_dialog_folder_reset_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                tools:text="12345">

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_alert_dialog_folder_reset_new_pwd"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/new_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_alert_dialog_folder_reset_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                tools:text="12345">

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_alert_dialog_folder_reset_confirm_pwd"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/confirm_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_alert_dialog_folder_reset_confirm_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                tools:text="12345">

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="right"
            android:padding="5dp">

            <Button
                android:id="@+id/btn_alert_dialog_folder_reset_close"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/close"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btn_alert_dialog_folder_reset_confirm"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:background="@drawable/selector_btn_enable_disable"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>